--- a/database/데이터_타입(유형).md
+++ b/database/데이터_타입(유형).md
@@ -33,8 +33,8 @@ DESC students;
 |BLOB|	0 ~ 65535 문자길이|
 |MEDIUMTEXT|	0 ~ 16777215 문자길이|
 |MEDIUMBLOB|	0 ~ 16777215 문자길이|
-|LONGTEXT|	0 ~|~ 4294967295 문자길이|
-|LONGBLOB|	0 ~|~ 4294967295 문자길이|
+|LONGTEXT|	0 ~ 4294967295 문자길이|
+|LONGBLOB|	0 ~ 4294967295 문자길이|
 
 2. 숫자형
 
@@ -42,8 +42,8 @@ DESC students;
 |-----------|-------|---------|-------|
 |INT	|4Byte|	-2147483648 ~ 2147483647|	0 ~ 4294967295|
 |TINYNT	|1Byte|	-128 ~ 127|	0 ~ 255 정수형, UNSIGNED|
-|FLOAT	|4Byte|	-3.402823466×1038 ~|~ 3.402823466×1038|
-|DOUBLE	|8Byte| 	-1.7976931348623157×10308 ~|~ 1.7976931348623157×10308|
+|FLOAT	|4Byte|	-3.402823466×1038 ~ 3.402823466×1038|
+|DOUBLE	|8Byte| 	-1.7976931348623157×10308 ~ 1.7976931348623157×10308|
 
 3. 날짜형
 |데이터 타입|	크기|	최소값|
