--- a/database/데이터_타입(유형).md
+++ b/database/데이터_타입(유형).md
@@ -42,10 +42,11 @@ DESC students;
 |-----------|-------|---------|-------|
 |INT	|4Byte|	-2147483648 ~ 2147483647|	0 ~ 4294967295|
 |TINYNT	|1Byte|	-128 ~ 127|	0 ~ 255 정수형, UNSIGNED|
-|FLOAT	|4Byte|	-3.402823466×1038 ~ 3.402823466×1038|
-|DOUBLE	|8Byte| 	-1.7976931348623157×10308 ~ 1.7976931348623157×10308|
+|FLOAT	|4Byte|	-3.402823466×1038 ~|~ 3.402823466×1038|
+|DOUBLE	|8Byte| 	-1.7976931348623157×10308 ~|~ 1.7976931348623157×10308|
 
 3. 날짜형
+
 |데이터 타입|	크기|	최소값|
 |-----------|-------|---------|
 |DATE|	3Byte|	YYYY-MM-DD|
