--- a/database/데이터베이스_인덱스.md
+++ b/database/데이터베이스_인덱스.md
@@ -21,7 +21,7 @@ DBMS는 index를 항상 최신의 정렬된 상태로 유지해야 원하는 값
 만약 CREATE, DELETE, UPDATE가 빈번한 속성에 인덱스를 걸게 되면 인덱스의 크기가 비대해져서 성능이 오히려 저하되는 역효과가 발생할 수 있다. 그러한 이유 중 하나는 DELETE와 UPDATE 연산 때문이다. 앞에서 설명한대로, UPDATE와 DELETE는 기존의 인덱스를 삭제하지 않고 '사용하지 않음' 처리를 해준다고 하였다. 만약 어떤 테이블에 UPDATE와 DELETE가 빈번하게 발생된다면 실제 데이터는 10만건이지만 인덱스는 100만 건이 넘어가게 되어, SQL문 처리 시 비대해진 인덱스에 의해 오히려 성능이 떨어지게 될 것이다.
 
 
-|구분|	 넌 클러스터드 인덱스| 	클러스터드 인덱스|
+|구분|	 클러스터드 인덱스| NONE클러스터드 인덱스|
 |----|-----------------------|------------------|
 |차이|	 물리적으로 행을 재배열|	 물리적으로 재배열 하지 않는다.|
 |크기|	 인덱스 페이지 용량이 넌 클러스터드 인덱스 페이지 용량보다 작다.|	 클러스터드 인덱스 페이지 용량보다 크다.|
