--- a/database/스키마와_3계층.md
+++ b/database/스키마와_3계층.md
@@ -1,15 +1,15 @@
-# 스키마 (Schema = Meta_data)
+### 스키마 (Schema = Meta_data)
 1. 데이터베이스의 구조와 제약조건을 표현
 2. 데이터 개체 속성 관계 제약조건 등을 전반적으로 정의
 
 
-# 외부스키마(서브스키마) = 사용자 관점
+### 외부스키마(서브스키마) = 사용자 관점
 1. 사용자가 필요로하는 데이터베이스의 논리적 구조
 2. 데이터베이스와 외부스키마는 다대일 또는 일대다로 공용할 수 있다.
 
-# 개념스키마 = 데이터베이스(조직의) 관점
+### 개념스키마 = 데이터베이스(조직의) 관점
 1. 구조, 관계, 제약조건, 권한, 보안 무결성 등을 정의
 2. 데이터베이스의 전체적이 논리구조, 전체의 데이터베이스에 하나만 존재함
 
-# 내부스키마 = 컴퓨터 관점
+### 내부스키마 = 컴퓨터 관점
 1. 데이터베이스의 물리적 구조, 즉 어떻게/어떤방식으로 저장되는가?
