--- a/database/스키마와_3계층.md
+++ b/database/스키마와_3계층.md
@@ -12,4 +12,4 @@
 2. 데이터베이스의 전체적이 논리구조, 전체의 데이터베이스에 하나만 존재함
 
 ### 내부스키마 = 컴퓨터 관점
-1. 데이터베이스의 물리적 구조, 즉 어떻게/어떤방식으로 저장되는가?
+1. 데이터베이스의 물리적 구조, 즉 어떻게/어떤방식으로 컴퓨터에 저장되는가?
