--- a/database/데이터베이스_인덱스.md
+++ b/database/데이터베이스_인덱스.md
@@ -24,7 +24,7 @@ DBMS는 index를 항상 최신의 정렬된 상태로 유지해야 원하는 값
 |구분|	 클러스터드 인덱스| NONE클러스터드 인덱스|
 |----|-----------------------|------------------|
 |차이|	 물리적으로 행을 재배열|	 물리적으로 재배열 하지 않는다.|
-|크기|	 인덱스 페이지 용량이 넌 클러스터드 인덱스 페이지 용량보다 작다.|	 클러스터드 인덱스 페이지 용량보다 크다.|
+|크기|	 인덱스 페이지 용량이 넌 클러스터드 인덱스 페이지 용량보다 작다.| 클러스터드 인덱스 페이지 용량보다 크다.|
 |선택도|	 30% 이내에서 사용해야 좋은 선택도|	 3% 이내에서 사용해야 좋은 선택도|
 |최대 갯수|	 테이블당 1개|	 테이블당 249개|
 
@@ -36,3 +36,12 @@ CREATE CLUSTERED INDEX '인덱스 이름' ON '테이블 이름' ('컬럼 이름'
 -- 넌클러스터 인덱스 작성
 CREATE NONCLUSTERED INDEX '인덱스 이름' ON '테이블 이름' ('컬럼 이름');
 ~~~
+
+Full Table Scan : 대용량 데이터, 비효율적
+
+Range Scan : 인덱스를 활용, 특정 범위만 스캔
+
+select (from where)효율적
+insert delete update 비효율적
+
+index 설정기준? -> 고유값
