--- a/database/데이터베이스_인덱스.md
+++ b/database/데이터베이스_인덱스.md
@@ -30,10 +30,10 @@ DBMS는 index를 항상 최신의 정렬된 상태로 유지해야 원하는 값
 
 
 ~~~SQL
-// 클러스터 인덱스 작성
+## 클러스터 인덱스 작성
 CREATE CLUSTERED INDEX '인덱스 이름' ON '테이블 이름' ('컬럼 이름');
 
-// 넌클러스터 인덱스 작성
+## 넌클러스터 인덱스 작성
 CREATE NONCLUSTERED INDEX '인덱스 이름' ON '테이블 이름' ('컬럼 이름');
 ~~~
 
