--- a/database/데이터베이스_인덱스.md
+++ b/database/데이터베이스_인덱스.md
@@ -28,8 +28,8 @@ DBMS는 index를 항상 최신의 정렬된 상태로 유지해야 원하는 값
 |선택도|	 30% 이내에서 사용해야 좋은 선택도|	 3% 이내에서 사용해야 좋은 선택도|
 |최대 갯수|	 테이블당 1개|	 테이블당 249개|
 
-[클러스터인덱스](https://user-images.githubusercontent.com/67908647/117973678-a53a5900-b367-11eb-92d7-2468183b7976.png)
-[넌인덱스](https://user-images.githubusercontent.com/67908647/117973687-a7041c80-b367-11eb-9bdb-e2129d32568a.png)
+![클러스터인덱스](https://user-images.githubusercontent.com/67908647/117973678-a53a5900-b367-11eb-92d7-2468183b7976.png)
+![넌인덱스](https://user-images.githubusercontent.com/67908647/117973687-a7041c80-b367-11eb-9bdb-e2129d32568a.png)
 
 
 ~~~SQL
