--- a/database/트리거.md
+++ b/database/트리거.md
@@ -1,6 +1,7 @@
 # 트리거(Trigger)
 1. 트리거 (Trigger)는 테이블에 대한 이벤트에 반응해 자동으로 실행되는 작업을 의미
 2. 트리거는 DML의 데이터 상태 관리를 자동화하는 데 사용
+3. 트랜잭션의 일부로 처리됨(commit, roll-back 미포함)
 
 ### 속성
 1. BEFORE 또는 AFTER
