--- a/database/데이터_타입(유형).md
+++ b/database/데이터_타입(유형).md
@@ -2,7 +2,7 @@
 
 ### 데이터베이스 생성
 CREATE TABLE $테이블명 ($칼럼 $데이터타입 $제약조건)
-~~~
+~~~SQL
 CREATE TABLE students (
     name VARCHAR(50) PRIMARY KEY,
     age INT(10) NOT NULL,
@@ -10,7 +10,7 @@ CREATE TABLE students (
 );
 ~~~
 결과
-~~~
+~~~SQL
 DESC students;
 +-------+-------------+------+-----+---------+-------+
 | Field | Type        | Null | Key | Default | Extra |
