--- a/database/트리거.md
+++ b/database/트리거.md
@@ -5,8 +5,8 @@
 	
 |타입	|설명|
 |-----|----|
-|로우(행)|	테이블에 INSERT, UPDATE, DELETE가 발생하는 로우마다 트리거의 내용이 실행되는 타입이다.|
-|문장	|로우의 개수에 상관없이 문장 단위로 한 번만 실행되는 타입이다.|
+|로우(행)|	테이블에 INSERT, UPDATE, DELETE가 발생하는 로우마다 트리거의 내용이 실행|
+|문장	|로우의 개수에 상관없이 문장 단위로 INSERT, UPDATE, DELETE가 발생할때 한번만 실행|
 
 
 
